# sph-benchmarks

./: README.md  run.sh
damBreak3D/: run-benchmark-damBreak3D.sh
damBreak3D/resoucres_dualsphysics/: damBreak3D_WCSPH-DBC_Def_template.xml  run.sh
damBreak3D/resources_openfpm-gpu-opt/: Makefile  main_template.cu  run.sh  setup_and_run.py
damBreak3D/resources_tnl-sph/: CMakeLists.txt  case.h  init.py  run.py
damBreak3D/resources_tnl-sph/template/: config.h  config_template.ini
damBreak3D/resources_tnl-sph/template/generateGeometryWithDualSPHysicsGenCase/: damBreak3D_WCSPH-DBC_Def.xml  damBreak3D_WCSPH-DBC_Def_template.xml  generateGeometryWithDualSPHysicsGenCase.sh
postpro/: process-and-compare-benchmark-data.py  process-damBreak-benchmark.py
results/results_dambreak3D-NVIDIA-A100/: dualSPHysics_0.0055_1.out  dualSPHysics_0.005_1.out  dualSPHysics_0.0065_1.out  dualSPHysics_0.006_1.out  dualSPHysics_0.0075_1.out  dualSPHysics_0.007_1.out  dualSPHysics_0.0085_1.out  dualSPHysics_0.008_1.out  dualSPHysics_0.0095_1.out  dualSPHysics_0.009_1.out  dualSPHysics_0.011_1.out  dualSPHysics_0.012_1.out  dualSPHysics_0.013_1.out  dualSPHysics_0.015_1.out  dualSPHysics_0.01_1.out  dualSPHysics_0.02_1.out  results.md
results/results_dambreak3D-NVIDIA-A40/: dualSPHysics_0.0055_1.out  dualSPHysics_0.005_1.out  dualSPHysics_0.0065_1.out  dualSPHysics_0.006_1.out  dualSPHysics_0.0075_1.out  dualSPHysics_0.007_1.out  dualSPHysics_0.0085_1.out  dualSPHysics_0.008_1.out  dualSPHysics_0.0095_1.out  dualSPHysics_0.009_1.out  dualSPHysics_0.011_1.out  dualSPHysics_0.012_1.out  dualSPHysics_0.013_1.out  dualSPHysics_0.015_1.out  dualSPHysics_0.01_1.out  dualSPHysics_0.02_1.out  results.md
results/results_dambreak3D-NVIDIA-GTX-1080-Ti/: log.out  result.md
results/results_dambreak3D-NVIDIA-H100/: dualSPHysics_0.0065_1.out  dualSPHysics_0.006_1.out  dualSPHysics_0.0075_1.out  dualSPHysics_0.007_1.out  dualSPHysics_0.0085_1.out  dualSPHysics_0.008_1.out  dualSPHysics_0.0095_1.out  dualSPHysics_0.009_1.out  dualSPHysics_0.011_1.out  dualSPHysics_0.012_1.out  dualSPHysics_0.013_1.out  dualSPHysics_0.015_1.out  dualSPHysics_0.01_1.out  dualSPHysics_0.02_1.out  result.md
results/results_dambreak3D-NVIDIA-H100-NVL/: case_0.0065_1_detail.html  case_0.006_1_detail.html  case_0.0075_1_detail.html  case_0.007_1_detail.html  case_0.0085_1_detail.html  case_0.008_1_detail.html  case_0.0095_1_detail.html  case_0.009_1_detail.html  case_0.011_1_detail.html  case_0.012_1_detail.html  case_0.013_1_detail.html  case_0.015_1_detail.html  case_0.01_1_detail.html  case_0.02_1_detail.html  dualSPHysics_0.0065_1.out  dualSPHysics_0.006_1.out  dualSPHysics_0.0075_1.out  dualSPHysics_0.007_1.out  dualSPHysics_0.0085_1.out  dualSPHysics_0.008_1.out  dualSPHysics_0.0095_1.out  dualSPHysics_0.009_1.out  dualSPHysics_0.011_1.out  dualSPHysics_0.012_1.out  dualSPHysics_0.013_1.out  dualSPHysics_0.015_1.out  dualSPHysics_0.01_1.out  dualSPHysics_0.02_1.out  open-fpm_0.0065_1.out  open-fpm_0.006_1.out  open-fpm_0.0075_1.out  open-fpm_0.007_1.out  open-fpm_0.0085_1.out  open-fpm_0.008_1.out  open-fpm_0.0095_1.out  open-fpm_0.009_1.out  open-fpm_0.011_1.out  open-fpm_0.012_1.out  open-fpm_0.013_1.out  open-fpm_0.015_1.out  (+46 more)
results/results_dambreak3D-NVIDIA-L40s/: result.md
results/results_dambreak3D-NVIDIA-Quadro-RTX-5000/: log.out  result.md
results/results_dambreak3D-NVIDIA-RTX-A4000/: log.out  result.md
